@@ -1,3 +1,8 @@
+Mon Feb  2 14:53:35 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/socket.c (sock_initialize): make 3rd argument, protocol,
+	  optional.
+
 Mon Feb  2 14:22:56 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/constants.c (cmsg_type_arg): INET6 check.
